<?xml version="1.0"?>
<package>
  <name>ptrack</name>
  <version>0.0.0</version>
  <description>The ptrack package, in part based on the rigit
  implementation by Shuo Han, as available from
  https://github.com/hanshuo/ros_rigit.git
  </description>

  <maintainer email="slivingston@cds.caltech.edu">Scott C. Livingston</maintainer>
  <author>Scott C. Livingston</author>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>trackem_ros</run_depend>


  <export></export>
</package>
